change in header

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="container">
-    <div class="style">Total Number of Children in 2016</div>
+    <div class="style">Total Number of Children under the age of 6</div>
       </div>
 
       <div class="population">
