fixed ipad & header

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           The President's task Force on Environmental Health Risks and Safety Risks to Children recently released an action plan to help various federal agencies in their efforts to protect children from lead exposure </div>
         <div class="style">
 
-          Total Number of Children in 2016
+          Total Number of Children Under the Age of 6
         </div>
         <div class="population">
 
@@ -73,7 +73,7 @@
       </div>
 
       <div class="container">
-    <div class="style">Total Number of Children under the age of 6</div>
+    <div class="style">Total Number of Children Under the Age of 6</div>
       </div>
 
       <div class="population">
